<resources>
    <string name="app_name">Score keeper App</string>
    <string name="reset">Reset</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="extraPoint">Extra Point</string>
    <string name="plusSixPoints">+6 Points</string>
    <string name="plusThreePoints">+3 Points</string>
    <string name="plusTwoOrSafety">+2 Points / Safety</string>
</resources>